# captacao-leads

./: .env.example  .gitignore  002_leads_unique_constraints.sql  Dockerfile  README.md  ci.yml  docker-stack.captacao.yml  docker-stack.firecrawl.yml  pyproject.toml  scheduler.py
captacao/: db.py  enricher.py  linkedin_scraper.py  message_generator.py  models.py  publisher.py
tests/: test_pipeline.py
